--- a/src/assets/new_spain/css/style.css
+++ b/src/assets/new_spain/css/style.css
@@ -220,6 +220,7 @@ main .items .item span {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 100px;
   border-right: 1px solid rgba(255, 255, 255, 0.1);
 }
