--- a/src/assets/new_spain/css/style.css
+++ b/src/assets/new_spain/css/style.css
@@ -602,7 +602,7 @@ footer .items {
   .sites .items {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     padding: 15px 10px;
   }
 
@@ -630,9 +630,9 @@ footer .items {
   .sites .items .item .table {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    gap: 12px;
+    gap: 5px;
     padding: 0;
   }
 
